deploy/spin-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-docs-webhook
  namespace: flux-system
spec:
  ingressClassName: nginx
  rules:
  - host: talos-dev-webhook.howard.moomboo.space
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: webhook-receiver
            port:
              number: 80
